// Copyright 2019 The MediaPipe Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//
// A protocol buffer encoding one or several detections in an image. A detection
// is defined by label and corresponding score, representing the classifier
// confidence for the label, and location, representing the spatial extent of
// the detection. All detections encoded by the protocol buffer relate to the
// same image location.

syntax = "proto2";

package mediapipe;

import "landmark.proto";
import "rect.proto";
import "classification.proto";
// import "mediapipe/framework/formats/detection.proto";

message SkeletimeBroadcast {
    optional ClassificationList handClassification = 1;
    repeated NormalizedLandmarkList handLandmarks = 2;
    repeated NormalizedRect handRect = 3;
    optional NormalizedLandmarkList poseLandmarks = 4;
    optional NormalizedRect poseRect = 5;
    // optional int handIndex = 1;
    // optional NormalizedRect rect = 2;
    // optional Detection detection = 2;
}


